# Unet-Inference-Acceleration-Project

./: .gitignore  README.md  RESULT.md  SETUP.md  pyproject.toml
notebooks/experiments/: torch_compile.ipynb  unet_inference_profiling.ipynb
notebooks/experiments/traces/: compiled_model.json  optimized_model.json  traced_model.json
notebooks/model/test/: load_baseline.ipynb
src/benchmark/: benchmarker.py  measurement_strategy.py
train/: load_baseline.ipynb  torch_compile.ipynb  train_COCO.ipynb
